--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 }
 
 /* banner style  */
-.banner_section {
+.banner_container {
     width: 100%;
     height: 100vh;
     background-image: url("./asset/image/background.jpg"), linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4));
@@ -68,4 +68,150 @@
 .banner_btn_1 {
     background-color: red;
     color: white;
+}
+
+.services_container {
+    background-image: url('./asset/image/footer-bg.png'), linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
+    background-blend-mode: overlay;
+    height: 100vh;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+
+.services_title {
+    width: 50%;
+}
+
+.author {
+    display: flex;
+    gap: 50px;
+    align-items: center;
+}
+
+.author img {
+    height: 100px;
+    width: 100px;
+    border-radius: 50px;
+}
+
+.author_img {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    border-right: 1px solid rgb(255, 0, 0);
+    padding-right: 80px;
+}
+
+.author button {
+    width: 150px;
+    height: 50px;
+}
+
+.services_img_box {
+    background-color: white;
+    padding: 20px;
+    width: 220px;
+    height: 200px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+
+}
+
+.services_img_box h2 {
+    color: black;
+}
+
+.services_img_container img {
+    width: 100px;
+    height: 100px;
+}
+
+.services_img_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    margin-top: 5px;
+}
+
+/* red box container  */
+
+.red_box_container {
+    width: 80%;
+    height: 130px;
+    background-color: red;
+    margin: -30px auto;
+    opacity: .7;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+}
+
+.red_box_container img {
+    width: 100px;
+    height: 100px;
+}
+
+.red_box_container button {
+    width: 170px;
+    padding: 15px 35px 15px 35px;
+    background-color: rgb(207, 214, 221);
+    font-size: 15px;
+
+}
+
+footer {
+    width: 90%;
+    background-color: gray;
+    margin: 30px auto;
+
+
+}
+
+footer h1 {
+    text-align: center;
+    font-size: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+
+}
+
+.footer_container {
+    display: flex;
+    text-align: justify;
+    align-items: center;
+    justify-content: center;
+    height: 600px;
+    gap: 50px;
+    margin-top: -100px;
+}
+
+.footer_container img {
+    height: 200px;
+    width: 250px;
+}
+
+.footer_container div {
+    width: 250px;
+}
+
+footer h1 span {
+    color: red;
+    margin-right: 20px;
 }
